# llm_app_question_and_answer

./: .gitignore  LangSmith Question & Answer.drawio  README.md  pyproject.toml
q_and_a/q_and_a/: chat_prompt_template.py  document_loader.py  llm_model.py  main.py  qanda.ipynb  web_document_loader.py
q_and_a/q_and_a/faiss_vectorstore_object/: vectorstore.pkl
